src/test/deca/context/invalid/tests/EXPR-not_wrong_type_operand.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: expresion avec opérandes de type incompatible.
// 
// Historique:
//    cree le 22/01/2022


class Test {
    int field = !5;

}